code/tui/snapshots/inline/mode/inline_draft_after_selection_escape.snap
---
source: code/tui/src/app/mode_tests.rs
expression: render(&app)
---
                                                  
● focus message 04                                
                                                  
● focus message 05                                
                                                  
● focus message 06                                
                                                  
● focus message 07                                
                                                  
           Ctrl+End to jump to bottom ↓           
                                                  
──────────────────────────────────────────────────
> x                                               
──────────────────────────────────────────────────
                                                  
  ⏸ Manual
