code/tui/snapshots/inline/mode/model_options_Inline.snap
---
source: code/tui/src/app/mode_tests.rs
expression: output
---
"                                                                                                                        "
"    ▄  ▄     Ash Code v0.1.0                                                                                            "
"  ▗█▛██▜█▖   Automatic model                                                                                            "
"  ▝▜████▛▘   .                                                                                                          "
"    ▝  ▘                                                                                                                "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"─ Model ────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"                                                                                                                        "
"  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮  "
"  │ Search models                                                                                                    │  "
"  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯  "
"> GPT-6 Astra      ██ ██ ██   Medium  [Fast off]  [Long context off]                                                    "
"                                                                                                                        "
"  ↑↓ select · Tab setting · ←→ adjust · / search · p pin · Enter apply · Esc cancel                                     "
