code/tui/snapshots/inline/mode/unicode_input_after_language_change.snap
---
source: code/tui/src/app/mode_tests.rs
expression: output
---

  Ash Co
  Automa
  .


● 错误




──────────
> x👩‍💻z
──────────

  ⏸ Man…
